--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -10,3 +10,17 @@ user.active=Active
 user.registered=Registered
 meal.title=Meals
 common.select=Select
+common.filter=Filter
+meal.delete=Delete meal
+meal.edit=Edit meal
+meal.add=Add meal
+meal.startDate=Start date
+meal.endDate=End date
+meal.startTime=Start time
+meal.endTime=End time
+meal.date=Date
+meal.desc=Description
+meal.calories=Calories
+meal.dateTime=Date&Time
+common.cancel=Cancel
+common.save=Save
